--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-icons": "^3.2.2",
+    "react-scripts": "2.1.1",
+    "reset-css": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build && mv build/index.html build/200.html && surge build --domain https://kc-client-lookup.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
