--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-icons": "^3.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "reset-css": "^4.0.1"
   },
@@ -15,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy" : "npm run build && mv build/index.html build/200.html && surge build --domain https://kc-client-lookup.surge.sh"
+    "deploy": "npm run build && mv build/index.html build/200.html && surge build --domain https://kc-client-lookup.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
